# leet_ai_devops

./: LICENSE  build.json  pyproject.toml  requirements.txt
leet_ai_devops/: hooks.py  modules.txt
leet_ai_devops/api/: devops.py
leet_ai_devops/config/: desktop.py
leet_ai_devops/desk_page/chat_session/: chat_session.js  chat_session.json
leet_ai_devops/leet_ai_devops/doctype/ai_devops_settings/: ai_devops_settings.js  ai_devops_settings.json  ai_devops_settings.py
leet_ai_devops/leet_ai_devops/doctype/chat_message/: chat_message.json  chat_message.py
leet_ai_devops/leet_ai_devops/doctype/chat_session/: chat_session.js  chat_session.json  chat_session.py
leet_ai_devops/leet_ai_devops/doctype/proposed_change/: proposed_change.json  proposed_change.py
leet_ai_devops/leet_ai_devops/workspace/ai_devops/: ai_devops.json
leet_ai_devops/public/css/: leet_ai_devops.css
leet_ai_devops/public/js/: boot.js
leet_ai_devops/utils/: ai_client.py  file_ops.py
